--- a/argocd/infra/backrest/http-route.yaml
+++ b/argocd/infra/backrest/http-route.yaml
@@ -13,14 +13,13 @@ metadata:
   namespace: backrest
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
-  - backrest.yanello.net
+    - backrest.yanello.net
   rules:
-  - backendRefs:
-    - name: backrest
-      namespace: backrest
-      port: 9898
-      
+    - backendRefs:
+        - name: backrest
+          namespace: backrest
+          port: 9898
