--- a/argocd/infra/monitoring/vmlogs/manifests/http-route.yaml
+++ b/argocd/infra/monitoring/vmlogs/manifests/http-route.yaml
@@ -12,8 +12,8 @@ metadata:
   name: vmlogs-httproute
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - logs.yanello.net
