--- a/argocd/archive-warrior/httproute.yaml
+++ b/argocd/archive-warrior/httproute.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: archive-warrior
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
+  - name: cilium-private-gateway
+    namespace: cilium
     sectionName: https
   hostnames:
   - warrior.yanello.net
