--- a/argocd/atuin/manifests/http-route.yaml
+++ b/argocd/atuin/manifests/http-route.yaml
@@ -6,9 +6,9 @@ metadata:
   name: atuin-http-route
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
-      sectionName: https
+  - name: cilium-private-gateway
+    namespace: cilium
+    sectionName: https
   hostnames:
     - atuin.yanello.net
   rules:
