--- a/argocd/backstage/manifests/http-route.yaml
+++ b/argocd/backstage/manifests/http-route.yaml
@@ -12,8 +12,8 @@ metadata:
   name: backstage-http-route
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
+  - name: cilium-private-gateway
+    namespace: cilium
     sectionName: https
   hostnames:
   - backstage.yanello.net
