--- a/argocd/change-detection/httproute.yaml
+++ b/argocd/change-detection/httproute.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: change-detection
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
+  - name: cilium-private-gateway
+    namespace: cilium
     sectionName: https
   hostnames:
   - change.yanello.net
