--- a/argocd/dev/dollardollar-dev/manifests/http-route.yaml
+++ b/argocd/dev/dollardollar-dev/manifests/http-route.yaml
@@ -12,8 +12,8 @@ metadata:
   name: dollardollar-dev-http-route
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - dollar-dev.yanello.net
