--- a/argocd/fooocus/manifests/http-route.yaml
+++ b/argocd/fooocus/manifests/http-route.yaml
@@ -10,9 +10,9 @@ metadata:
     gethomepage.dev/pod-selector: app.kubernetes.io/name=fooocus
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - focus.yanello.net
   rules:
