--- a/argocd/frigate/manifests/http-route.yaml
+++ b/argocd/frigate/manifests/http-route.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: frigate
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - frigate.yanello.net
