--- a/argocd/homebox/http-route.yaml
+++ b/argocd/homebox/http-route.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: homebox
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
+  - name: cilium-private-gateway
+    namespace: cilium
     sectionName: https
   hostnames:
   - homebox.yanello.net
