--- a/argocd/homepage/manifests/http-route.yaml
+++ b/argocd/homepage/manifests/http-route.yaml
@@ -4,9 +4,9 @@ metadata:
   name: homepage-http-route
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - home.yanello.net
   rules:
