--- a/argocd/infra/gitea/manifests/http-route.yaml
+++ b/argocd/infra/gitea/manifests/http-route.yaml
@@ -13,28 +13,28 @@ metadata:
   namespace: gitea
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - gitea.yanello.net
   rules:
   - backendRefs:
     - name: gitea-http
       port: 3000
----
-apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: TCPRoute
-metadata:
-  name: gitea-ssh
-  namespace: gitea
-spec:
-  parentRefs:
-    - name: gateway-api
-      namespace: istio-system
-      sectionName: ssh
-  rules:
-    - backendRefs:
-        - name: gitea-ssh
-          port: 22
----
+# ---
+# apiVersion: gateway.networking.k8s.io/v1alpha2
+# kind: TCPRoute
+# metadata:
+#   name: gitea-ssh
+#   namespace: gitea
+# spec:
+#   parentRefs:
+#     - name: gateway-api
+#       namespace: istio-system
+#       sectionName: ssh
+#   rules:
+#     - backendRefs:
+#         - name: gitea-ssh
+#           port: 22
+# ---
