--- a/argocd/infra/monitoring/uptime-kuma/manifests/http-route.yaml
+++ b/argocd/infra/monitoring/uptime-kuma/manifests/http-route.yaml
@@ -13,8 +13,8 @@ metadata:
   # name: vm-httproute
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - kuma.yanello.net
