--- a/argocd/infra/renovate/manifests/http-route.yaml
+++ b/argocd/infra/renovate/manifests/http-route.yaml
@@ -7,9 +7,12 @@ metadata:
   namespace: renovate
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - renovate.yanello.net
   rules:
