--- a/argocd/infra/storage/longhorn/manifests/http-route.yaml
+++ b/argocd/infra/storage/longhorn/manifests/http-route.yaml
@@ -13,9 +13,9 @@ metadata:
   namespace: longhorn
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - longhorn.yanello.net
   rules:
