--- a/argocd/media-server/plex/http-route.yaml
+++ b/argocd/media-server/plex/http-route.yaml
@@ -10,14 +10,16 @@ metadata:
     gethomepage.dev/pod-selector: app=plex
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
+      sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
-  - plex.yanello.net
+    - plex.yanello.net
   rules:
-  - backendRefs:
-    - name: plex
-      namespace: plex
-      port: 32400
-      
+    - backendRefs:
+        - name: plex
+          namespace: plex
+          port: 32400
