--- a/argocd/media-server/prowlarr/http-route.yaml
+++ b/argocd/media-server/prowlarr/http-route.yaml
@@ -13,9 +13,9 @@ metadata:
   namespace: prowlarr
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - prowlarr.yanello.net
   rules:
