--- a/argocd/media-server/sonarr/http-route.yaml
+++ b/argocd/media-server/sonarr/http-route.yaml
@@ -10,9 +10,9 @@ metadata:
     gethomepage.dev/pod-selector: app=sonarr
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - sonarr.yanello.net
   rules:
