--- a/argocd/media-server/wrapperr/manifests/http-route.yaml
+++ b/argocd/media-server/wrapperr/manifests/http-route.yaml
@@ -12,8 +12,8 @@ metadata:
   name: wrapperr-http-route
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - wrapperr.yanello.net
