--- a/argocd/open-webui/manifests/http-route.yaml
+++ b/argocd/open-webui/manifests/http-route.yaml
@@ -1,28 +1,28 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  annotations:
-    gethomepage.dev/enabled: "true"
-    gethomepage.dev/name: Open WebUI
-    gethomepage.dev/icon: sh-open-webui
-    gethomepage.dev/description: "Open WebUI is an extensible, self-hosted AI interface that adapts to your workflow, all while operating entirely offline."
-    gethomepage.dev/pod-selector: app.kubernetes.io/instance=open-webui
-  labels:
-    app.kubernetes.io/instance: open-webui
-  name: ollama-httproute
-  namespace: open-webui
-spec:
-  parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: ollama
-  hostnames:
-  - ollama.yanello.net
-  rules:
-  - backendRefs:
-    - name: open-webui-ollama
-      namespace: open-webui
-      port: 11434
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   annotations:
+#     gethomepage.dev/enabled: "true"
+#     gethomepage.dev/name: Open WebUI
+#     gethomepage.dev/icon: sh-open-webui
+#     gethomepage.dev/description: "Open WebUI is an extensible, self-hosted AI interface that adapts to your workflow, all while operating entirely offline."
+#     gethomepage.dev/pod-selector: app.kubernetes.io/instance=open-webui
+#   labels:
+#     app.kubernetes.io/instance: open-webui
+#   name: ollama-httproute
+#   namespace: open-webui
+# spec:
+#   parentRefs:
+#   - name: gateway-api
+#     namespace: istio-system
+#     sectionName: ollama
+#   hostnames:
+#   - ollama.yanello.net
+#   rules:
+#   - backendRefs:
+#     - name: open-webui-ollama
+#       namespace: open-webui
+#       port: 11434
       
 ---
 apiVersion: gateway.networking.k8s.io/v1
@@ -36,9 +36,9 @@ metadata:
   namespace: open-webui
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - chat.yanello.net
   rules:
@@ -46,6 +46,3 @@ spec:
     - name: open-webui
       namespace: open-webui
       port: 80
-      
-    matches:
-    - {}
