--- a/argocd/owntracks/manifests/http-route.yaml
+++ b/argocd/owntracks/manifests/http-route.yaml
@@ -9,9 +9,12 @@ metadata:
   namespace: owntracks
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - owntracks.yanello.net
   rules:
