--- a/argocd/paperless/manifests/http-route.yaml
+++ b/argocd/paperless/manifests/http-route.yaml
@@ -1,28 +1,31 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  annotations:
-    gethomepage.dev/enabled: "true"
-    gethomepage.dev/name: Paperless
-    gethomepage.dev/icon: paperless
-    gethomepage.dev/description: "Paperless-ngx is a document management system that transforms your physical documents into a searchable online archive so you can keep, well, less paper."
-    gethomepage.dev/pod-selector: app=paperless
-  labels:
-    app.kubernetes.io/instance: paperless-app
-  name: paperless-ai-httproute
-  namespace: paperless
-spec:
-  parentRefs:
-    - name: gateway-api
-      namespace: istio-system
-      sectionName: https
-  hostnames:
-    - paperless-ai.yanello.net
-  rules:
-    - backendRefs:
-        - name: paperless-ai
-          namespace: paperless
-          port: 3000
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   annotations:
+#     gethomepage.dev/enabled: "true"
+#     gethomepage.dev/name: Paperless
+#     gethomepage.dev/icon: paperless
+#     gethomepage.dev/description: "Paperless-ngx is a document management system that transforms your physical documents into a searchable online archive so you can keep, well, less paper."
+#     gethomepage.dev/pod-selector: app=paperless
+#   labels:
+#     app.kubernetes.io/instance: paperless-app
+#   name: paperless-ai-httproute
+#   namespace: paperless
+# spec:
+#   parentRefs:
+#     - name: cilium-private-gateway
+#       namespace: cilium
+#       sectionName: https
+#     - name: cilium-public-gateway
+#       namespace: cilium
+#       sectionName: https
+#   hostnames:
+#     - paperless-ai.yanello.net
+#   rules:
+#     - backendRefs:
+#         - name: paperless-ai
+#           namespace: paperless
+#           port: 3000
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -35,8 +38,11 @@ metadata:
   namespace: paperless
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
       sectionName: https
   hostnames:
     - paperless.yanello.net
