--- a/argocd/vaultwarden/manifests/http-route.yaml
+++ b/argocd/vaultwarden/manifests/http-route.yaml
@@ -13,9 +13,12 @@ metadata:
   namespace: vaultwarden
 spec:
   parentRefs:
-  - name: gateway-api
-    namespace: istio-system
-    sectionName: https
+    - name: cilium-private-gateway
+      namespace: cilium
+      sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
   - bitwarden.yanello.net
   rules:
