--- a/argocd/infra/istio/app.yaml
+++ b/argocd/infra/istio/app.yaml
@@ -97,30 +97,30 @@ spec:
     repoURL: https://github.com/myanello/homelab.git
     targetRevision: HEAD
     path: argocd/infra/istio/resources
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: istio-external # app to make services external to k8s known
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    name: in-cluster
-    namespace: istio-system
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-  source:
-    repoURL: https://github.com/myanello/homelab.git
-    targetRevision: HEAD
-    path: argocd/infra/istio/external
----
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: istio-external # app to make services external to k8s known
+#   namespace: argocd
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   destination:
+#     name: in-cluster
+#     namespace: istio-system
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
+#   source:
+#     repoURL: https://github.com/myanello/homelab.git
+#     targetRevision: HEAD
+#     path: argocd/infra/istio/external
+# ---
 
 # dont need ingress gateway anymore
 # apiVersion: argoproj.io/v1alpha1
