switch external service gateways to cilium6

--- a/argocd/media-server/maintainerr/manifests/http-route.yaml
+++ b/argocd/media-server/maintainerr/manifests/http-route.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: cilium #istio-system
       sectionName: https
   hostnames:
-    - maintainerr.yanello.internal
+    - maintainerr.yanello.net
   rules:
     - backendRefs:
         - name: maintainerr
