--- a/argocd/infra/cilium/manifests/httpRoute.yaml
+++ b/argocd/infra/cilium/manifests/httpRoute.yaml
@@ -12,11 +12,11 @@ metadata:
   name: hubble-ui-httproute
 spec:
   parentRefs:
-  - name: cilium-gateway
+  - name: cilium-private-gateway
     namespace: cilium
     sectionName: https
   hostnames:
-  - hubble.yanello.internal
+  - hubble.yanello.net
   rules:
   - backendRefs:
     - name: hubble-ui
