set up multi primary3

--- a/argocd/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/media-server/qbittorrent/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - manifests/deploy.yaml
   - manifests/service.yaml
   - manifests/pvc.yaml
-  - manifests/net-policy.yaml
+  #- manifests/net-policy.yaml
   - manifests/http-route.yaml
   - manifests/ns.yaml
   
