--- a/argocd/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
@@ -3,12 +3,12 @@ kind: HTTPRoute
 metadata:
   labels:
     app.kubernetes.io/instance: monitoring-app
-  # annotations:
-  #   gethomepage.dev/enabled: "true"
-  #   gethomepage.dev/name: VictoriaMetrics
-  #   gethomepage.dev/icon: victoriametrics
-  #   gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
-  #   gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: VictoriaMetrics
+    gethomepage.dev/icon: victoriametrics
+    gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
   name: vm-httproute
 spec:
   parentRefs:
