argo public gateway

--- a/argocd/argocd/manifests/httproute.yaml
+++ b/argocd/argocd/manifests/httproute.yaml
@@ -16,6 +16,9 @@ spec:
     - name: cilium-private-gateway
       namespace: cilium
       sectionName: https
+    - name: cilium-public-gateway
+      namespace: cilium
+      sectionName: https
   hostnames:
     - argocd.yanello.net
   rules:
