--- a/argocd/immich/manifests/deploy.yaml
+++ b/argocd/immich/manifests/deploy.yaml
@@ -207,7 +207,7 @@ spec:
         app: redis
     spec:
       containers:
-        - image: docker.io/redis:7.4-alpine@sha256:ee9e8748ace004102a267f7b8265dab2c618317df22507b89d16a8add7154273
+        - image: docker.io/valkey/valkey:8-bookworm@sha256:ff21bc0f8194dc9c105b769aeabf9585fea6a8ed649c0781caeac5cb3c247884
           imagePullPolicy: IfNotPresent
           name: redis
           ports:
@@ -277,7 +277,7 @@ spec:
                 secretKeyRef:
                   name: immich-secrets
                   key: DB_PASSWORD
-          image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:739cdd626151ff1f796dc95a6591b55a714f341c737e27f045019ceabf8e8c52
+          image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0@sha256:fa4f6e0971f454cd95fec5a9aaed2ed93d8f46725cc6bc61e0698e97dba96da1
           imagePullPolicy: IfNotPresent
           livenessProbe:
             exec:
