psql diag mode off

--- a/argocd/infra/authentik/manifests/values.yaml
+++ b/argocd/infra/authentik/manifests/values.yaml
@@ -85,7 +85,7 @@ redis:
 postgresql:
   enabled: true
   diagnosticMode:
-    enabled: true
+    enabled: false
   primary:
     persistence:
       enabled: true
