--- a/argocd/infra/vault/kustomization.yaml
+++ b/argocd/infra/vault/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: hashicorp/vault
+  - name: vault
     repo: https://helm.releases.hashicorp.com
     version: "0.30.0"
-    releaseName: hashicorp/vault
+    releaseName: vault
     namespace: vault
     valuesFile: ./values.yaml
