--- a/argocd/infra/vault/values.yaml
+++ b/argocd/infra/vault/values.yaml
@@ -13,35 +13,35 @@ server:
     raft:
       enabled: true
       setNodeId: true
-      config: |
-        ui = true
-        cluster_name = "vault-integrated-storage"
-        listener "tcp" {
-          address = "[::]:8200"
-          cluster_address = "[::]:8201"
-          tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
-          tls_key_file = "/vault/userconfig/tls-server/tls.key"
-        }
-        storage "raft" {
-          path = "/vault/data"
-          retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8200"
-            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8200"
-            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8200"
-            leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
+      # config: |
+      #   ui = true
+      #   cluster_name = "vault-integrated-storage"
+      #   listener "tcp" {
+      #     address = "[::]:8200"
+      #     cluster_address = "[::]:8201"
+      #     tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
+      #     tls_key_file = "/vault/userconfig/tls-server/tls.key"
+      #   }
+      #   storage "raft" {
+      #     path = "/vault/data"
+      #     retry_join {
+      #       leader_api_addr = "https://vault-0.vault-internal:8200"
+      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
+      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+      #     }
+      #     retry_join {
+      #       leader_api_addr = "https://vault-1.vault-internal:8200"
+      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
+      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+      #     }
+      #     retry_join {
+      #       leader_api_addr = "https://vault-2.vault-internal:8200"
+      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
+      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+      #     }
   # we need to define custom readiness/liveness Probe settings
   readinessProbe:
     enabled: true
@@ -52,13 +52,13 @@ server:
     initialDelaySeconds: 60
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-ca/ca.crt
-  extraVolumes:
-    - type: secret
-      name: tls-server
-    - type: secret
-      name: tls-ca
-    - type: secret
-      name: kms-creds
+  # extraVolumes:
+  #   - type: secret
+  #     name: tls-server
+  #   - type: secret
+  #     name: tls-ca
+  #   - type: secret
+  #     name: kms-creds
   auditStorage:
     enabled: true
 
