--- a/talos/cilium/kustomization.yaml
+++ b/talos/cilium/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# resources:
+resources:
+  - manifests/ns.yaml
   #- https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
   # - manifests/cert.yaml
   # - manifests/privateGateway.yaml
