--- a/argocd/infra/vault/kustomization.yaml
+++ b/argocd/infra/vault/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - httpRoute.yaml
+
 helmCharts:
   - name: vault
     repo: https://helm.releases.hashicorp.com
