--- a/argocd/infra/monitoring/vmlogs/kustomization.yaml
+++ b/argocd/infra/monitoring/vmlogs/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# resources:
-#   - ./manifests/http-route.yaml
+resources:
+  - ./manifests/http-route.yaml
 
-helmCharts:
-  - name: victoria-logs-single 
-    releaseName: victoria-logs-single 
-    namespace: monitoring
-    repo: https://victoriametrics.github.io/helm-charts/
-    version: "0.11.2"
-    valuesFile: values.yaml
+# helmCharts:
+#   - name: victoria-logs-single 
+#     releaseName: victoria-logs-single 
+#     namespace: monitoring
+#     repo: https://victoriametrics.github.io/helm-charts/
+#     version: "0.11.2"
+#     valuesFile: values.yaml
