add spire to cilium

--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -44,3 +44,10 @@ hubble:
 
 bgpControlPlane:
   enabled: true
+
+authentication:
+  mutual:
+    spire:
+      enabled: true
+      install:
+        enabled: true
