add garmin grafana2

--- a/argocd/garmin/manifests/secrets.yaml
+++ b/argocd/garmin/manifests/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 stringData:
     INFLUXDB_HOST: ENC[AES256_GCM,data:HZXmJepJpkAnYcwzwf5osJ3CyczO/h++JfimLCv8nD5NqJQh9nPO8MeneavUMkvvUxk/PiBfxbZsN9TumrgNGg==,iv:UzWxvXNDAATLYVER4HSwoUg/7VMLgm2tRGBgTAxgyUA=,tag:cpSigzZS4Heno03SRLfU3w==,type:str]
-    INFLUXDB_PORT: ENC[AES256_GCM,data:XRSRjQ==,iv:FBosT7s3q0G83I0iwCFX4LBDx4F9Ga072K+4pJKQDzY=,tag:nMm1FprMaOp6nb+UFtZMvQ==,type:str]
+    INFLUXDB_PORT: ENC[AES256_GCM,data:gRWscQ==,iv:NSF+14xwIEp7sVGbTTu/mah0Ch8bdSPyUZuyHYZ1huk=,tag:DCrk+3BymJomnTR1V56mgw==,type:str]
     INFLUXDB_USERNAME: ENC[AES256_GCM,data:LPrOi/tc,iv:U0/mXZbTOto53TD1gHrgLAc+t6cL4kfup6pnSDFlmmM=,tag:7Ecqp6WO9zsDqBL51wED7A==,type:str]
     INFLUXDB_PASSWORD: ENC[AES256_GCM,data:R/sD/Pc=,iv:Lly32isAn6bXJss+T3kMaEONM8SCL6oD63ZA/1nFpIA=,tag:kvw8700ehyKONrMey3RwRQ==,type:str]
     GARMINCONNECT_EMAIL: ENC[AES256_GCM,data:NDYsWuMvocfrUnYx7UC/Wqo1,iv:tuR9HptG87kk4uA0c4SD+vdbSptmgf003Aw/DvRA5WQ=,tag:4iG9daS2YYaVvA4Q1Idlyw==,type:str]
@@ -21,7 +21,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-19T14:23:51Z"
-    mac: ENC[AES256_GCM,data:83946UFLspBq9ZLrklOPJtAxHTr4+mXOcpW12ad24csdZFPL1eXXS6dhWIHmcrjybJFSFoF/F9og5t6HBPscKtmypx4rRaa6UjA1cRmlOZJVMsm6ab/6k7xPT5QIOMdUIJ4VhmBLs16HMbk7UNBR4iRWdCGt8HBfC9xJFh9P6RA=,iv:qhHaQVfn+Y8RcXLX1dloShkKWfgDzPqTjlQ346BH03k=,tag:LIY5O/7gvsU0iMrfG1FteQ==,type:str]
+    lastmodified: "2025-06-20T00:40:59Z"
+    mac: ENC[AES256_GCM,data:JLXPROesffaLpxfGQCwnj8Buujf+XejbalJQBefoIG57OXSvnf+59ksIMYJ1ndMW4cx7k+X38MrejhQfNHgylIv970N5EwJFnQQFB6MzE0BWyBHTs1lHCQ0csB7oNy1WTL8vPsY757EMapGZXjI1UwV6dJTjmYmtWqvCgrI/QYQ=,iv:zDQAZccI1Idhv8g0HZ6q2vE5XsXGXewEt4SLx4Jep84=,tag:mmoHHI+GfCMXPKUQTk3cVg==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.2
