--- a/argocd/ytdl/manifests/deploy.yaml
+++ b/argocd/ytdl/manifests/deploy.yaml
@@ -133,6 +133,10 @@ spec:
       containers:
         - image: mongo:8.0.10@sha256:98028cf281bb5d49ace5e1ddbd4509e8f1382fe80ef1cf101eeefdc106d76cd4
           name: ytdl-mongo-db
+          ports:
+            - containerPort: 27017
+              protocol: TCP
+              name: mongo
           resources:
             limits:
               cpu: 100m
