statefulset fix for garmin connect

--- a/argocd/garmin/manifests/deploy.yaml
+++ b/argocd/garmin/manifests/deploy.yaml
@@ -54,7 +54,9 @@ spec:
             - mountPath: /home/appuser/.garminconnect
               name: garmin-data
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: garmin-data
       spec:
         accessModes: [ "ReadWriteOnce" ]
