--- a/argocd/garmin/manifests/dashboard.yaml
+++ b/argocd/garmin/manifests/dashboard.yaml
@@ -8,115 +8,6 @@ metadata:
 data:
   garmin-dashboard.json: |-
     {
-      "__inputs": [
-        {
-          "name": "DS_GARMIN_STATS",
-          "label": "Garmin Stats",
-          "description": "",
-          "type": "datasource",
-          "pluginId": "influxdb",
-          "pluginName": "InfluxDB"
-        }
-      ],
-      "__elements": {},
-      "__requires": [
-        {
-          "type": "panel",
-          "id": "barchart",
-          "name": "Bar chart",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "gauge",
-          "name": "Gauge",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "geomap",
-          "name": "Geomap",
-          "version": ""
-        },
-        {
-          "type": "grafana",
-          "id": "grafana",
-          "name": "Grafana",
-          "version": "12.0.1"
-        },
-        {
-          "type": "panel",
-          "id": "heatmap",
-          "name": "Heatmap",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "histogram",
-          "name": "Histogram",
-          "version": ""
-        },
-        {
-          "type": "datasource",
-          "id": "influxdb",
-          "name": "InfluxDB",
-          "version": "1.0.0"
-        },
-        {
-          "type": "panel",
-          "id": "marcusolsson-hourly-heatmap-panel",
-          "name": "Hourly heatmap",
-          "version": "2.0.1"
-        },
-        {
-          "type": "panel",
-          "id": "piechart",
-          "name": "Pie chart",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "stat",
-          "name": "Stat",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "state-timeline",
-          "name": "State timeline",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "table",
-          "name": "Table",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "text",
-          "name": "Text",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "timeseries",
-          "name": "Time series",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "trend",
-          "name": "Trend",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "xychart",
-          "name": "XY Chart",
-          "version": ""
-        }
-      ],
       "annotations": {
         "list": [
           {
@@ -136,7 +27,7 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": null,
+      "id": 1,
       "links": [],
       "panels": [
         {
@@ -153,6 +44,10 @@ data:
           "type": "row"
         },
         {
+          "fieldConfig": {
+            "defaults": {},
+            "overrides": []
+          },
           "gridPos": {
             "h": 3,
             "w": 3,
@@ -1008,8 +903,8 @@ data:
         },
         {
           "datasource": {
-            "type": "influxdb",
-            "uid": "${DS_GARMIN_STATS}"
+            "type": "prometheus",
+            "uid": "P4169E866C3094E38"
           },
           "description": "",
           "fieldConfig": {
@@ -1075,6 +970,10 @@ data:
                 "type": "influxdb",
                 "uid": "${DS_GARMIN_STATS}"
               },
+              "disableTextWrap": false,
+              "editorMode": "builder",
+              "expr": "DailyStats_totalSteps",
+              "fullMetaSearch": false,
               "groupBy": [
                 {
                   "params": [
@@ -1089,9 +988,12 @@ data:
                   "type": "fill"
                 }
               ],
+              "includeNullMetadata": true,
+              "legendFormat": "__auto",
               "measurement": "DailyStats",
               "orderByTime": "ASC",
               "policy": "default",
+              "range": true,
               "refId": "A",
               "resultFormat": "time_series",
               "select": [
@@ -1109,7 +1011,8 @@ data:
                 ]
               ],
               "tags": [],
-              "tz": "$TimeZone"
+              "tz": "$TimeZone",
+              "useBackend": false
             }
           ],
           "title": "Today's Steps",
@@ -13872,6 +13775,7 @@ data:
           "type": "timeseries"
         }
       ],
+      "preload": false,
       "refresh": "5m",
       "schemaVersion": 41,
       "tags": [],
@@ -14171,6 +14075,5 @@ data:
       "timezone": "browser",
       "title": "Garmin Stats",
       "uid": "feiibsx498gsgb",
-      "version": 217,
-      "weekStart": ""
+      "version": 1
     }
