--- a/argocd/infra/monitoring/influxdb/kustomization.yaml
+++ b/argocd/infra/monitoring/influxdb/kustomization.yaml
@@ -10,6 +10,6 @@ helmCharts:
     valuesInline: 
       service: 
         type: LoadBalancer
-        #loadBalancerIP: 192.168.1.100
+        loadBalancerIP: 10.10.8.0
       persistence:
         storageClassName: longhorn
