--- a/argocd/infra/monitoring/influxdb/kustomization.yaml
+++ b/argocd/infra/monitoring/influxdb/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+generators:
+  - secret-generator.yaml
+
 helmCharts:
   - name: influxdb
     repo: https://helm.influxdata.com/
@@ -13,3 +16,6 @@ helmCharts:
         loadBalancerIP: 10.10.8.0
       persistence:
         storageClassName: longhorn
+      setDefaultUser:
+        enabled: true
+        existingSecret: influxdb-secrets
